# AdventOfCode

./: .gitignore  AdventOfCode.cabal  day02.hs  day05.hs  day07.hs  day09.hs  doctest-config.json  package.yaml  readme.md  stack.yaml  template_file.hs
2015/: day01.hs
2016/: day01.hs  day02.hs  day03.hs  day04.hs
2017/: KnotHash.hs  TwoWayList.hs  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs
2018/: day01.hs  day02.hs
exes/: explore-point-formations.hs
src/: Array2D.hs  KnotHash.hs  Pos.hs  PrefixSumGrid.hs  PriorityQueue.hs  Queue.hs  Tape.hs  TwoWayList.hs  Utils.hs
src/Year2015/: Day01.hs
src/Year2016/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs
src/Year2017/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/Year2018/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  day03.cpp
test/: Array2DSpec.hs  PrefixSumGridSpec.hs  QueueSpec.hs  Spec.hs  UtilsSpec.hs  Year2015Spec.hs  Year2015SpecIgnore.hs.ignore  Year2016Spec.hs  Year2017Spec.hs  Year2017SpecIgnore.hs.ignore  Year2018Spec.hs  year2015Spec.hs  year2016Spec.hs  year2017Spec.hs
(+14 files in other folders)
