name:                AdventOfCode
version:             0.1.0.0
homepage:            https://github.com/pascal-so/AdventOfCode#readme
author:              Pascal Sommer
maintainer:          p@pascalsommer.ch
copyright:           Copyright (c) 2017 Pascal Sommer
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

executable advent
  hs-source-dirs:      2017
  main-is:             day19.hs
  default-language:    Haskell2010
  other-modules:       Queue
                     , KnotHash
  build-depends:       base >= 4.7 && < 6
                     , containers >= 0.5.8 && < 0.6
                     , vector >= 0.12 && < 0.13
                     , lens >= 4.10 && < 4.16
                     , parsec >= 3 && < 4
                     , mtl >= 2.2 && < 2.3
                     , fgl >= 5.5 && < 5.7
